# diri-cyrex

./: .dockerignore  .env.example  .env.example.mpsmac  .gitattributes  .gitignore  .gitmodules  =1.1.0  ARCHITECTURE.md  CYREX_VENDOR_FRAUD_QUICK_START.md  DATA_COLLECTION_UPDATED.md  Dockerfile  Dockerfile.cpu  Dockerfile.jupyter  EMBEDDING_AND_LLM_FIXES.md  HOW_TO_START_TRAINING.md  HOW_TO_USE_CYREX.md  INDEXING_PIPELINE_BLUEPRINT.md  LANGCHAIN_1X_UPGRADE.md  LICENSE.md  NEXT_IMMEDIATE_STEPS.md  PACKAGES_VERIFICATION.md  QUICK_START_TRAINING.md  README.md  README_AI_SYSTEM.md  TRAINING_MODELS.md  TRAINING_QUICK_START.md  VENDOR_FRAUD_IMPLEMENTATION_COMPLETE.md  build.ps1  build.sh  cyrex_watcher.py  detect_gpu.ps1  detect_gpu.sh  docker-compose.yml  pyproject.toml  pytest.ini  requirements-core.txt  requirements-cpu.txt  requirements-mpsos.txt  requirements.txt  run_tests.py  (+2 more)
.git-hooks/: README.md  post-checkout  post-merge  pre-push
.github/codeql/: README.md  codeql-config.yml
.github/workflows/: ci.yml
Connor/: agent_init.py  chain.py  guardrails.py  helpers.py  prompts.py  state.py  testing.py  tool_registry.py  tools.py
Luke/: guardrails.py  initialize.py  prompts.py  tools.py
app/: AGENTS_IMPLEMENTATION.md  IMPLEMENTATION_SUMMARY.md  logging_config.py  main.py  settings.py
app/agents/: README.md  __init__.py  agent_factory.py  automation_tools.py  base_agent.py  metrics.py
app/core/: __init__.py  advanced_guardrails.py  agent_initializer.py  agent_integration.py  agent_state_processor.py  authentication.py  connection_pool.py  document_stream_consumer.py  enhanced_guardrails.py  enhanced_state_manager.py  event_handler.py  event_registry.py  execution_engine.py  guardrails.py  langgraph_agent.py  langgraph_integration.py  langgraph_workflow.py  latency_optimizer.py  memory_manager.py  monitoring.py  orchestrator.py  parallel_tool_executor.py  pipeline_auto_capture.py  prompt_manager.py  prompt_templates.py  queue_manager.py  queue_system.py  rate_limit_tools.py  realtime_data_pipeline.py  redis_streams_broker.py  request_queue_manager.py  session_manager.py  state_manager.py  streaming_coordinator.py  streaming_tool_bridge.py  system_initializer.py  tool_registry.py  tool_schema_optimizer.py  training_data_store.py  types.py
app/database/: agent_tables.py  postgres.py
app/integrations/: __init__.py  api_bridge.py  company_data_automation.py  embeddings_wrapper.py  enhanced_universal_rag_engine.py  llm_providers.py  local_llm.py  lora_adapter_service.py  messaging_service_client.py  milvus_store.py  model_loader.py  ollama_container.py  openai_wrapper.py  rag_bridge.py  rag_pipeline.py  realtime_streaming.py  synapse_broker.py  universal_rag_engine.py
app/middleware/: rate_limiter.py
app/pipeline/: __init__.py
app/routes/: agent.py  agent_playground_api.py  collection_management_api.py  company_automation_api.py  cyrex_guard_api.py  document_extraction_api.py  document_indexing_api.py  documents.py  intelligence_api.py  language_intelligence_api.py  monitoring.py  orchestration_api.py  rag.py  session.py  testing_api.py  training_api.py  universal_rag_api.py  vendor_fraud_api.py  workflow_api.py
app/services/: __init__.py  advanced_document_analyzer.py  bandit_service.py  clause_evolution_tracker.py  command_router.py  contextual_ability_engine.py  data_processor.py  document_indexing_service.py  document_parser_service.py  document_verification_service.py  embedding_service.py  fraud_detector.py  invoice_parser.py  knowledge_retrieval_engine.py  lora_loader.py  obligation_dependency_graph.py  pricing_benchmark.py  task_classifier.py  template_learning_service.py  vendor_intelligence_service.py  workflow_optimizer.py
app/training/: __init__.py  agent_training_service.py  correction_trainer.py  helox_job_client.py  model_reload_listener.py  training_status.py
app/utils/: cache.py  device_detection.py  docker_scanner.py  gpu_utils_bridge.py  security_validators.py
cyrex-agi/: .gitignore  Dockerfile  README.md  requirements.txt
cyrex-agi/app/: __init__.py  main.py
cyrex-interface/: .eslintrc.cjs  .gitignore  Dockerfile  README.md  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
cyrex-interface/src/: App.css  App.tsx  main.tsx  vite-env.d.ts
docker/: docker-compose.override.yml.example
docs/: AGENTS_IMPLEMENTATION.md  ALGORITHM_INTEGRATION_ANALYSIS.md  ARCHITECTURE.md  COMPANY_AUTOMATION_ALIGNMENT.md  COMPANY_AUTOMATION_SYSTEM.md  CYREX_COMPLETE_IMPLEMENTATION.md  CYREX_VENDOR_FRAUD_SYSTEM.md  DATA_COLLECTION_QUICK_START.md  LANGCHAIN_1X_UPGRADE.md  LANGGRAPH_MIGRATION_PLAN.md  LORA_INTEGRATION.md  LORA_QLORA_SYSTEM.md  README.md  README_AI_SYSTEM.md  RTX_5080_SUPPORT.md  TRAINING_MODELS.md
docs/agi/: CYREX_AGI_DESIGN_PLAN_V2.md  CYREX_AGI_IMPLEMENTATION_PLAN_V2.md  CYREX_AGI_POSTGRES_SCHEMA.md  CYREX_AGI_PRODUCER_SUBSCRIBER_MAP.md  CYREX_AGI_VISUALIZATION_PLAN_V2.md
docs/architecture/: ARCHITECTURE.md  CORE_SYSTEMS.md  CYREX_COMPLETE_IMPLEMENTATION.md  DATA_STORAGE_ARCHITECTURE.md  DOCUMENT_STREAM_ARTIFACT_PLAN.md  FINAL_STORAGE_ARCHITECTURE.md  (+7 more)
examples/: cyrex_guard_example.py  universal_rag_example.py
prompts/: general_qa.json  rag_qa.json  tool_use.json
requirements/: README.md  requirements-core.txt  requirements-cpu.txt  requirements-gpu-utils.txt  requirements-mpsos.txt  requirements.txt
scripts/: README.md  README_LATENCY_TEST.md  check-ollama-models.sh  export_cyrex_contract_json_schema.py  install-local-llm.ps1  install-local-llm.sh  record_gpu_integration_baseline.sh  run_tests.py  setup_local_model.sh
tests/: ASYNC_RESOURCE_FIXES.md  INDEX.md  README.md  README_TESTS.md  TEST_LOGGING_GUIDE.md  TEST_RUNNER_GUIDE.md  WARNINGS_FIX_SUMMARY.md  conftest.py  pytest.ini  test_agent_metrics.py  test_authentication.py  test_comprehensive.py  test_diri_agent_toolbox_integration.py  test_document_stream_consumer.py  test_rate_limiting.py  test_realtime_data_pipeline_postgres.py  test_realtime_data_pipeline_postgres_mirror.py
workflow_states/: test-workflow.json
(+208 files in other folders)
