[tool.poetry]
name = "diri-cyrex"
version = "3.0.0"
description = "Deepiri AI Challenge Service API"
authors = ["Deepiri Team"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
fastapi = "0.112.2"
uvicorn = { version = "0.30.6", extras = ["standard"] }
pydantic = "2.8.2"
pydantic-settings = "2.2.1"
python-dotenv = "1.0.1"
httpx = "0.27.2"
structlog = "24.1.0"
python-json-logger = "2.0.7"
prometheus-client = "0.20.0"
redis = { version = ">=5.0.1", extras = ["hiredis"] }
python-multipart = ">=0.0.6"
psutil = ">=5.9.0"
watchdog = ">=3.0.0"
openai = "1.109.1"
numpy = ">=1.24.0"
deepiri-modelkit = { git = "https://github.com/Team-Deepiri/deepiri-modelkit.git", branch = "feat/training-contracts-v0.2" }
deepiri-training-orchestrator = { git = "https://github.com/Team-Deepiri/deepiri-training-orchestrator.git", branch = "feat/v0.4.0-dataset-first", extras = ["modelkit", "distributed"] }

[tool.poetry.group.training.dependencies]
torch = ">=2.0.0"
transformers = ">=4.35.0"
datasets = ">=2.14.0"
accelerate = ">=0.24.0"
mlflow = ">=2.7.0"
peft = ">=0.7.0"
sentence-transformers = ">=2.2.0"
scikit-learn = ">=1.3.0"
pandas = ">=2.0.0"

[tool.poetry.group.service.dependencies]
asyncpg = ">=0.29.0"
gymnasium = ">=0.29.0"
pymilvus = ">=2.3.0"
pinecone-client = ">=3.0.0"
weaviate-client = ">=4.0.0"
influxdb-client = ">=1.38.0"
kubernetes = ">=28.1.0"
optuna = ">=3.5.0"
hyperopt = ">=0.2.7"
tensorboard = ">=2.15.0"
networkx = ">=3.2"
zstandard = ">=0.22.0"
brotli = ">=1.1.0"
ollama = ">=0.1.0"
langchain = "0.2.12"
langchain-core = "0.2.43"
langchain-community = "0.2.10"
langchain-text-splitters = "0.2.2"
langchain-openai = "0.1.22"
langchain-milvus = "0.1.4"
langchain-huggingface = "0.0.3"
langchain-ollama = "0.1.0"
langsmith = ">=0.1.0"
langgraph = ">=0.2.0,<0.3.0"
pdfplumber = ">=0.10.0"
pypdf2 = ">=3.0.0"
python-docx = ">=1.1.0"
pytesseract = ">=0.3.10"
pillow = ">=10.0.0"
pdf2image = ">=1.16.0"
beautifulsoup4 = ">=4.12.0"
openpyxl = ">=3.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "8.3.2"
pytest-asyncio = "0.23.5"
pytest-cov = "4.1.0"
pytest-timeout = "2.3.1"
ruff = "^0.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
